Fix nav alignment

--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ nav a:hover:not(.active) {
         font-size: 2vw;
         display: block;
         position: absolute;
-        margin: 37px 35px 20px;
+        margin: 37px 34px 20px;
         transition: 0.5s;
         left: 0;
         top: 0;
